--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,14 @@ server.port = 80
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 
-spring.datasource.url = jdbc:oracle:thin:@localhost:1521/orcl
-spring.datasource.username = board
-spring.datasource.password = qwer
-spring.datasource.driver-class-name = oracle.jdbc.OracleDriver
+#spring.datasource.url = jdbc:oracle:thin:@localhost:1521/orcl
+#spring.datasource.username = board
+#spring.datasource.password = qwer
+#spring.datasource.driver-class-name = oracle.jdbc.OracleDriver
+spring.datasource.url = jdbc:mysql://localhost:3306/java_test?serverTimeZone=UTC&CharacterEncoding=UTF-8
+spring.datasource.username = java
+spring.datasource.password = 1234
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.thymeleaf.enabled=true
 spring.thymeleaf.cache=false
